--- a/sample_config.env
+++ b/sample_config.env
@@ -1,40 +1,40 @@
 # Masukan APP ID ambil di web my.telegram.org
-APP_ID = "6"
+APP_ID = "27409279"
 
 # Masukan API HASH ambil di web my.telegram.org
-API_HASH = "eb06d4abfb49dc3eeb1aeb98ae0f581e"
+API_HASH = "2bbccc7b7b5a389e8a9c3ad2e2dccfba"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "10010102:2abcdefghijklmnopqrstuvwxyz"
+TG_BOT_TOKEN = "6198940709:AAF4VJhN-iR3b5D6sYz902hrs_znAG1GQLk"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
-ADMINS = "1234567890"
+ADMINS = "5601116777"
 
 # Masukan Username Telegram mu tanpa @
-OWNER = "mrismanaziz"
+OWNER = "dreamnih"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_GROUP = 0
+FORCE_SUB_GROUP = -1001643381196
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = 0
+FORCE_SUB_CHANNEL = -1001537280879
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
 FORCE_SUB_CHANNEL2 = 0
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -100
+CHANNEL_ID = -1001181133507
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = ""
+DATABASE_URL = "postgres://fotqvgrx:SBIvwHbqWuoz-p082sJqC4ibJabmJAWw@snuffleupagus.db.elephantsql.com/fotqvgrx"
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
 # Untuk Menonaktifkan PROTECT_CONTENT Ubah ke False
-PROTECT_CONTENT = False
+PROTECT_CONTENT = True
 
