--- a/sample_config.env
+++ b/sample_config.env
@@ -1,18 +1,18 @@
 # Masukan APP ID ambil di web my.telegram.org
-APP_ID = "27409279"
+APP_ID = "18501987"
 
 # Masukan API HASH ambil di web my.telegram.org
-API_HASH = "2bbccc7b7b5a389e8a9c3ad2e2dccfba"
+API_HASH = "22ecd6ab00a971f29a6146b2182640a6"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "6198940709:AAF4VJhN-iR3b5D6sYz902hrs_znAG1GQLk"
+TG_BOT_TOKEN = "5610201809:AAGCRRXbPaN6cTldFkq6oWRmJteA4cH0j_w"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
-ADMINS = "5601116777"
+ADMINS = "5368651741"
 
 # Masukan Username Telegram mu tanpa @
-OWNER = "dreamnih"
+OWNER = "wanttodissapearr"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
@@ -20,14 +20,14 @@ FORCE_SUB_GROUP = -1001896664841
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = -1001643381196
+FORCE_SUB_CHANNEL = -1001508124882
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
 FORCE_SUB_CHANNEL2 = 0
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -1001842763407
+CHANNEL_ID = -1001163324492
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
