--- a/sample_config.env
+++ b/sample_config.env
@@ -24,7 +24,7 @@ FORCE_SUB_CHANNEL = -1001508124882
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL2 = 0
+FORCE_SUB_CHANNEL2 = -1001647552026
 
 # Masukan ID Channel Untuk [Channel Database]
 CHANNEL_ID = -1001163324492
