--- a/sample_config.env
+++ b/sample_config.env
@@ -1,37 +1,37 @@
 # Masukan APP ID ambil di web my.telegram.org
-APP_ID = "18501987"
+APP_ID = "27409279"
 
 # Masukan API HASH ambil di web my.telegram.org
-API_HASH = "22ecd6ab00a971f29a6146b2182640a6"
+API_HASH = "2bbccc7b7b5a389e8a9c3ad2e2dccfba"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "5610201809:AAGCRRXbPaN6cTldFkq6oWRmJteA4cH0j_w"
+TG_BOT_TOKEN = "6198940709:AAF4VJhN-iR3b5D6sYz902hrs_znAG1GQLk"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
-ADMINS = "5368651741"
+ADMINS = "5601116777"
 
 # Masukan Username Telegram mu tanpa @
-OWNER = "wanttodissapearr"
+OWNER = "dreamnih"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_GROUP = -1001896664841
+FORCE_SUB_GROUP = -1001643381196
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = -1001508124882
+FORCE_SUB_CHANNEL = 0
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL2 = -1001647552026
+FORCE_SUB_CHANNEL2 = 0
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -1001163324492
+CHANNEL_ID = -1001842763407
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = "postgres://fotqvgrx:SBIvwHbqWuoz-p082sJqC4ibJabmJAWw@snuffleupagus.db.elephantsql.com/fotqvgrx"
+DATABASE_URL = "postgres://mpcduulx:gYUkSftNWUuaxucaNpOSZkxo0_gYQ6L-@horton.db.elephantsql.com/mpcduulx"
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
