--- a/sample_config.env
+++ b/sample_config.env
@@ -1,37 +1,37 @@
 # Masukan APP ID ambil di web my.telegram.org
-APP_ID = "27409279"
+APP_ID = "18925885"
 
 # Masukan API HASH ambil di web my.telegram.org
-API_HASH = "2bbccc7b7b5a389e8a9c3ad2e2dccfba"
+API_HASH = "376320918628dc39145000269b73f483"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "6198940709:AAF4VJhN-iR3b5D6sYz902hrs_znAG1GQLk"
+TG_BOT_TOKEN = "5951600009:AAHoXWyijvtj-Z7XaDB033vmgxLmKKO9ZUQ"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
-ADMINS = "5601116777"
+ADMINS = "5042563853"
 
 # Masukan Username Telegram mu tanpa @
-OWNER = "dreamnih"
+OWNER = "btrsmiley"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_GROUP = -1001643381196
+FORCE_SUB_GROUP = -1001618304127
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = 0
+FORCE_SUB_CHANNEL = -1001541597124
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
 FORCE_SUB_CHANNEL2 = 0
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -1001842763407
+CHANNEL_ID = -1001780423297
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = "postgres://mpcduulx:gYUkSftNWUuaxucaNpOSZkxo0_gYQ6L-@horton.db.elephantsql.com/mpcduulx"
+DATABASE_URL = "postgres://wpcgsxoy:zqP4xS8cSuEWgkF1uvp4WKHRb9VqQDwD@arjuna.db.elephantsql.com/wpcgsxoy"
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
